--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,11 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
     },
     "jsx": "react-jsx",
     "jsxImportSource": "react",
     "types": ["vite-plugin-svgr/client"],
+    "moduleResolution": "bundler",
   },
 }
