--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@keystatic/astro": "^5.0.6",
     "@keystatic/core": "^0.5.48",
     "@markdoc/markdoc": "^0.5.4",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-tabs": "^1.1.13",
     "@tailwindcss/vite": "^4.1.18",
     "@types/react": "^18.3.1",
