--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "prebuild": "node scripts/sync-keystatic-assets.js",
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
@@ -15,8 +14,6 @@
     "@astrojs/check": "^0.9.6",
     "@astrojs/netlify": "^6.6.3",
     "@astrojs/react": "^4.4.2",
-    "@keystatic/astro": "^5.0.6",
-    "@keystatic/core": "^0.5.48",
     "@markdoc/markdoc": "^0.5.4",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-tabs": "^1.1.13",
@@ -39,6 +36,8 @@
     "vite-plugin-svgr": "^4.5.0"
   },
   "devDependencies": {
+    "@stackbit/cms-git": "^1.0.37",
+    "@stackbit/types": "^2.1.15",
     "prettier": "^3.7.4",
     "prettier-plugin-astro": "^0.14.1"
   }
