fix: downgrade Vite to 6.0.8 to resolve allowedHosts bug
Vite 6.0.9+ has a confirmed bug where allowedHosts: true is ignored
in containerized environments (GitHub Issue #19242, #19411).

Downgrading to Vite 6.0.8 resolves the 'Blocked request' error in
Netlify Visual Editor where the preview server rejects requests from
devserver-preview--*.netlify.app domains despite correct configuration.

This override forces all packages to use Vite 6.0.8, bypassing the
bug introduced in Vite 6.0.9 that affects Docker and containerized
deployments including Netlify Visual Editor.

--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
     "@stackbit/types": "^2.1.15",
     "prettier": "^3.7.4",
     "prettier-plugin-astro": "^0.14.1"
+  },
+  "overrides": {
+    "vite": "6.0.8"
   }
 }
