--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "vite-plugin-svgr": "^4.5.0"
   },
   "devDependencies": {
+    "@stackbit/cli": "^0.3.135",
     "@stackbit/cms-git": "^1.0.37",
     "@stackbit/types": "^2.1.15",
     "prettier": "^3.7.4",
