--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@astrojs/check": "^0.9.6",
     "@astrojs/netlify": "^6.6.3",
     "@astrojs/react": "^4.4.2",
-    "@markdoc/markdoc": "^0.5.4",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-tabs": "^1.1.13",
     "@tailwindcss/vite": "^4.1.18",
@@ -28,8 +27,10 @@
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "12.26.2",
     "lucide-react": "^0.562.0",
+    "marked": "^17.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "stackbit": "^0.0.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
